@startuml
' doneee
class Company {
    id : long
    name : String
    description : String
    address : String
    logo : String
    createdAt : Instant
    updatedAt : Instant
    createdBy: String
    updatedBy: String
}
' doneee
class Job {
    id : long
    name : String
    location : String
    salary : double
    quantity : int
    level : Enums
    description : String
    startDate : Instant
    endDate : Instant
    isActive : boolean
    createdAt : Instant
    updatedAt : Instant
    createdBy: String
    updatedBy: String
}
' doneee
class Permission {
    id : long
    name : String
    apiPath : String
    method : String
    module : String
    createdAt : Instant
    updatedAt : Instant
    createdBy : String
    updatedBy : String
}
' doneee
class Resume {
    id : long
    email : String
    url : String
    status : Enums
    createdAt : Date
    updatedAt : Date
    createdBy : String
    updatedBy : String
}
' doneee
class Skill {
    id : long
    name : String
    createdAt : Instant
    updatedAt : Instant
    createdBy: String
    updatedBy: String
}
' doneee
class Subscriber {
    id : long
    email : String
    name : String
    createdAt : Instant
    updatedAt : Instant
    createdBy: String
    updatedBy: String
}
' done
class User {
    id : long
    name : String
    email : String
    password : String
    age : int
    gender : Enums
    address : String
    refreshToken : String
    createdAt : Instant
    updatedAt : Instant
    createdBy: String
    updatedBy: String
}
' donee
class Role {
    id : long
    name : String
    description : String
    isActive : boolean
    createdAt : Instant
    updatedAt : Instant
    createdBy: String
    updatedBy: String
    }

' Relationships
User "n" -- "1" Role 
User "n" -- "1" Company 
User "1" -- "1" Subscriber
User "1" -- "*" Resume
Company "1" -- "*" Job 
Job "*" -- "*" Skill 
Role "*" -- "*" Permission
Subscriber "*" -- "*" Skill 

@enduml